--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -99,7 +99,7 @@
 				imageContainer.classList.add('image-container');
 
 				var img = document.createElement('img');
-				img.src = '/images/' + imageName;
+				img.src = 'images/' + imageName;
 				img.alt = imageName;
 
 				imageContainer.appendChild(img);
